<resources>
    <string name="app_name">Petagram</string>
    <string name="img_content_description">Default content description</string>
    <string name="nombre_mascota">Nombre</string>
    <string name="rating_default">0</string>
    <string name="actionview_recientes_titulo">Favoritos Recientes</string>
    <string name="item_contacto">Contacto</string>
    <string name="item_about">Acerca de</string>
    <string name="tv_about_text">Acerca del Programador</string>
    <string name="tv_profile_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus risus dolor, sed posuere erat sodales sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;.</string>
    <string name="teit_nombre_hint">Nombre</string>
    <string name="teit_email_hint">Email</string>
    <string name="btn_enviar_comentario_text">Enviar Comentario</string>
    <string name="tv_contacto_text">Contacto</string>
    <string name="teit_comentario_hint">Comentario</string>
    <string name="tv_nombre_perfil_text">user-id</string>
    <!-- CREDENCIALES DE CORREO, SOLO GMAIL ESTA SOPORTADO. Ejemplo: usuario@gmail.com -->
    <string name="EMAIL"></string>
    <string name="PASSWORD"></string>
    <string name="item_config">Configurar Cuenta</string>
    <string name="teit_nombre_usuario_hint">Escribe tu user-id</string>
    <string name="btn_guardar_cuenta_text">Guardar Cuenta</string>
</resources>